--- a/src/main/resources/templates/layouts/Master/companyDetail.html
+++ b/src/main/resources/templates/layouts/Master/companyDetail.html
@@ -95,7 +95,7 @@
 																			style="color: red">*</span>
 																		<input type="text" class="form-control"
 																			id="companyCode" name="companyCode"
-																			placeholder="company code"
+																			placeholder="Company Code"
 																			th:field="*{compCode}"
 																			title="This field is required"
 																			onkeyup="getCompanyCode()" required>
