--- a/src/main/resources/templates/layouts/Master/serviceCategory.html
+++ b/src/main/resources/templates/layouts/Master/serviceCategory.html
@@ -12,6 +12,20 @@
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+
+
+	<style>
+		.error {
+			color: red;
+			font-size: 11px;
+		}
+	</style>
+
+
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -60,14 +74,22 @@
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div><!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/servicecategory/}" method="POST"
-												th:object="${serviceCategory}">
+											<form id="serviceCategoryForm" role="form" th:action="@{/servicecategory/}"
+												method="POST" th:object="${serviceCategory}">
 												<div class="box-body">
 
 													<div class="form-group col-md-6">
-														<label>Category Code</label> <input type="text"
-															class="form-control" placeholder="category code"
-															th:field="*{categoryCode}">
+														<label>Category Code</label><span style="color: red">*</span>
+														<input type="text" class="form-control"
+															placeholder="category code" th:field="*{categoryCode}">
+													</div>
+
+
+													<div class="form-group col-md-6">
+														<label for="inputPassword4">Description</label><span
+															style="color: red">*</span> <input type="text"
+															class="form-control" placeholder="Description"
+															th:field="*{description}" title="This field is required" required>
 													</div>
 
 													<div class="form-group col-md-6">
@@ -76,39 +98,27 @@
 															th:field="*{accountCode}">
 													</div>
 													<div class="form-group col-md-6">
-														<label for="inputPassword4">Category Type</label> <input
-															type="text" class="form-control" placeholder="category type"
-															th:field="*{categoryType}">
+														<label class="form-label">Category Type</label> <label
+															style="color: red">*</label> <select class="form-control"
+															id="" title="This field is required" required>
+
+															<option value="sales">Sales</option>
+															<option value="journal">Journal</option>
+
+														</select>
 													</div>
 
-													<div class="form-group col-md-6">
-														<label for="inputPassword4">Description</label> <input
-															type="text" class="form-control" placeholder="description"
-															th:field="*{description}">
-													</div>
 
 
 
 
 
 
-													<div class="form-group" style="margin: 10px;">
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="Y">
-															<label class="form-check-label"
-																for="inlineRadio1">Active</label>
-														</div>
-
-														<div class="form-check form-check-inline">
-															<input class="form-check-input" type="radio"
-																name="inlineRadioOptions" id="inlineRadio1" value="N">
-															<label class="form-check-label"
-																for="inlineRadio1">In-Active</label>
-														</div>
-
-													</div>
+													<label class="checkbox-inline">
+														<input type="radio" value="Y" name="inlineRadioOptions">Active
+														<input type="radio" value="N"
+															name="inlineRadioOptions">In-Active
+													</label>
 
 												</div><!-- /.box-body -->
 
@@ -140,10 +150,19 @@
 			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
+
+			<script>
+
+				$("#serviceCategoryForm").validate({
+					ignoreTitle: true
+				});
+
+			</script>
+
 			<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<!--<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>-->
 			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
 			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
