--- a/src/main/resources/templates/layouts/Master/categoryMaster.html
+++ b/src/main/resources/templates/layouts/Master/categoryMaster.html
@@ -18,6 +18,17 @@
 		rel="stylesheet" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+
+
+	<style>
+		.error {
+			color: red;
+			font-size: 11px;
+		}
+	</style>
 
 </head>
 
@@ -68,7 +79,7 @@
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div><!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/category/}" method="POST"
+											<form id="categoryForm" role="form" th:action="@{/category/}" method="POST"
 												th:object="${category}">
 												<div class="box-body">
 
@@ -78,9 +89,10 @@
 															th:field="*{categCode}" title="category code" readonly>
 													</div>
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Description</label> <input type="text"
-															class="form-control" placeholder="Description"th:field="*{description}"
-															title="discription">
+														<label for="inputEmail4">Description</label><span
+															style="color: red">*</span> <input type="text"
+															class="form-control" placeholder="Description"
+															th:field="*{description}" title="This field is required" required>
 													</div>
 
 													<div class="form-group col-md-6">
@@ -96,9 +108,11 @@
 
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Account Description</label> <input type="text"
-															class="form-control" placeholder="Account Description"
-															title="account discription" th:field="*{accountDescription}">
+														<label for="inputEmail4">Account Description</label> <input
+															type="text" class="form-control"
+															placeholder="Account Description"
+															title="account discription"
+															th:field="*{accountDescription}">
 													</div>
 
 													<div class="form-group col-md-6">
@@ -168,6 +182,15 @@
 
 				});
 			</script>
+
+			<script>
+
+				$("#categoryForm").validate({
+					ignoreTitle: true
+				});
+
+			</script>
+
 			<!--   <section class="content">
         
         </section>-->
