--- a/src/main/resources/templates/layouts/Master/financialyear.html
+++ b/src/main/resources/templates/layouts/Master/financialyear.html
@@ -93,14 +93,14 @@
 															readonly>
 													</div>
 													<div class="form-group col-md-12">
-														<label for="inputPassword4">From (Date)</label> 
+														<label for="inputPassword4">From (Date)</label><span style="color: red">*</span> 
 														<input type="text" class="form-control" name="fromDate"
-															id="fromDate" placeholder='From Date' title="from date" th:field="*{fromDate}" required/>
+															id="fromDate" placeholder='From Date' title="This field is required" th:field="*{fromDate}" required/>
 													</div>
 													<div class="form-group col-md-12">
-														<label for="inputEmail4">To (Date)</label>
+														<label for="inputEmail4">To (Date)</label><span style="color: red">*</span>
 														<input type="text" class="form-control" name="datepicker"
-															id="datepicker" placeholder='To Date' title="to date" th:field="*{toDate}" required/>
+															id="datepicker" placeholder='To Date' title="This field is required" th:field="*{toDate}" required/>
 													</div>
 
 
