--- a/src/main/resources/templates/layouts/Master/program.html
+++ b/src/main/resources/templates/layouts/Master/program.html
@@ -18,6 +18,16 @@
 		rel="stylesheet" />
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/6.2.0/sweetalert2.min.js"></script>
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+	<style>
+		.error {
+			color: red;
+			font-size: 11px;
+		}
+	</style>
+
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -68,7 +78,7 @@
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div><!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/program/}" method="POST"
+											<form id="programForm"role="form" th:action="@{/program/}" method="POST"
 												th:object="${program}">
 												<div class="box-body">
 
@@ -79,16 +89,17 @@
 													</div>
 
 													<div class="form-group col-md-6">
-														<label>Program Name</label> <input type="text"
+														<label>Program Name</label><span
+															style="color: red">*</span> <input type="text"
 															class="form-control" placeholder="Program Name"
-															th:field="*{programName}" title="program name">
+															th:field="*{programName}" title="This field is required" required>
 													</div>
 
 													<div class="form-group col-md-12">
 														<label class="form-label">Sub Module Name</label> <label
 															style="color: red">*</label> <select class="form-control"
-															 th:field="*{subModuleMaster}"
-															required title="sub module name">
+															th:field="*{subModuleMaster}" required
+															title="This field is required">
 															<option value="">Select Sub Module</option>
 															<option th:each="subModule :  ${listSubModule}"
 																th:text="${subModule.subModuleName}"
@@ -97,9 +108,10 @@
 													</div>
 
 													<div class="form-group col-md-6">
-														<label for="inputPassword4">Program Type</label> <input
+														<label for="inputPassword4">Program Type</label><span
+															style="color: red">*</span> <input
 															type="text" class="form-control" placeholder="Program Type"
-															th:field="*{programType}" title="program type">
+															th:field="*{programType}" title="This field is required">
 													</div>
 
 													<div class="form-group col-md-6">
@@ -108,7 +120,7 @@
 															th:field="*{programHrefName}" title="program href">
 													</div>
 
-													<div class="form-group col-md-6">
+													<div class="form-group col-md-12">
 														<label for="inputPassword4">Sequence Number</label> <input
 															type="text" class="form-control" title="sequence number"
 															placeholder="Sequence Number" th:field="*{seqNo}">
@@ -171,6 +183,13 @@
 				});
 			</script>
 
+			<script>
+
+				$("#programForm").validate({
+					ignoreTitle: true
+				});
+
+			</script>
 			<!--   <section class="content">
         
         </section>-->
