--- a/src/main/resources/templates/layouts/Master/userRights.html
+++ b/src/main/resources/templates/layouts/Master/userRights.html
@@ -12,6 +12,18 @@
 	<link rel="stylesheet" href="../../css/AdminLTE.min.css" th:href="@{/css/AdminLTE.min.css}">
 	<link rel="stylesheet" href="../../css/skins/_all-skins.min.css" th:href="@{/css/skins/_all-skins.min.css}">
 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
+	<script src="https://cdn.jsdelivr.net/jquery.validation/1.16.0/jquery.validate.min.js"></script>
+
+
+	<style>
+		.error {
+			color: red;
+			font-size: 11px;
+		}
+	</style>
+
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -60,14 +72,15 @@
 												<!--<h3 class="box-title">Category Master</h3>-->
 											</div><!-- /.box-header -->
 											<!-- form start -->
-											<form role="form" th:action="@{/userrights/}" method="POST"
-												th:object="${userRights}">
+											<form id="userRightForm" role="form" th:action="@{/userrights/}"
+												method="POST" th:object="${userRights}">
 
 												<div class="box-body">
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">User Name</label> <select
-															class="form-control" id="" title="User Name"
+														<label for="inputEmail4">User Name</label><span
+															style="color: red">*</span> <select class="form-control"
+															id="" title="This Field is required"
 															th:field="*{myUser.userCode}" required>
 															<option value="">Select User</option>
 															<option th:each="user :  ${listMyUser}"
@@ -78,9 +91,10 @@
 
 
 													<div class="form-group col-md-6">
-														<label for="inputEmail4">Module</label> <select
-															class="form-control" id="" title="User Name"
-															th:field="*{module}" required>
+														<label for="inputEmail4">Module</label><span
+															style="color: red">*</span> <select class="form-control"
+															id="" title="This field is required" th:field="*{module}"
+															required>
 															<option value="">Select Module</option>
 															<option th:each="module :  ${listModule}"
 																th:text="${module.moduleName}"
@@ -90,10 +104,12 @@
 													</div>
 
 													<div class="form-group col-md-6">
-														<label class="form-label">Sub-Module</label> <label
+														<label class="form-label">Sub-Module</label><span
+															style="color: red">*</span> <label
 															style="color: red">*</label>
-														<select class="form-control" id="" title="User Name"
-															th:field="*{subModule}" required>
+														<select class="form-control" id=""
+															title="This field is required" th:field="*{subModule}"
+															required>
 															<option value="">Select Module</option>
 															<option th:each="subModule :  ${listSubModule}"
 																th:text="${subModule.subModuleName}"
@@ -104,10 +120,12 @@
 
 
 													<div class="form-group col-md-6">
-														<label class="form-label">Program</label> <label
+														<label class="form-label">Program</label><span
+															style="color: red">*</span> <label
 															style="color: red">*</label>
-														<select class="form-control" id="" title="User Name"
-															th:field="*{prgCode}" required>
+														<select class="form-control" id=""
+															title="This field is required" th:field="*{prgCode}"
+															required>
 															<option value="">Select</option>
 															<option th:each="program :  ${listProgram}"
 																th:text="${program.programName}"
@@ -153,14 +171,24 @@
 			</div>
 
 			<div th:replace="fragments/footer :: footer">...</div>
-			
+
 			function myFun(){
-				alert("under construction")
+			alert("under construction")
 			}
+
+			<script>
+
+				$("#userRightForm").validate({
+					ignoreTitle: true
+				});
+
+			</script>
+
+
 			<!--   <section class="content">
         
         </section>-->
-			<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>
+			<!--<script src="../../js/jQuery-2.1.4.min.js" th:src="@{/js/jQuery-2.1.4.min.js}"></script>-->
 			<script src="../../js/bootstrap.min.js" th:src="@{/js/bootstrap.min.js}"></script>
 			<script src="../../js/fastclick.min.js" th:src="@{/js/fastclick.min.js}"></script>
 			<script src="../../js/app.min.js" th:src="@{/js/app.min.js}"></script>
